--- a/sembast_flutter_example/pubspec.yaml
+++ b/sembast_flutter_example/pubspec.yaml
@@ -23,15 +23,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  tekartik_sembast_flutter:
+  tekartik_app_flutter_sembast:
     git:
-      url: git://github.com/tekartik/sembast_flutter_more.dart
-      path: sembast_flutter
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      path: app_sembast
       ref: dart2
+      version: '>=0.2.0'
   tekartik_common_utils:
     git:
       url: git://github.com/tekartik/common_utils.dart
       ref: dart2
+  tekartik_app_platform:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_platform
+    version: '>=0.1.0'
+  tekartik_app_roboto:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_roboto
+      version: '>=0.1.0'
   path_provider:
 
 dev_dependencies:
@@ -71,17 +84,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: packages/tekartik_app_roboto/fonts/Roboto/Roboto-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
