--- a/cloud_firestore_type_adapters/pubspec.yaml
+++ b/cloud_firestore_type_adapters/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  process_run: '>=0.10.1'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
