test: add github actions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dev_dependencies:
       ref: dart2
     version: '>=0.1.0'
   process_run: '>=0.10.1'
+  dev_test:
 
 dependency_overrides:
-  pedantic: '>=1.9.0 <3.0.0'
+#  pedantic: '>=1.9.0 <3.0.0'
 
