--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ dart:
   - beta
   - dev
 before_script:
-  - pub run tekartik_travis_ci_flutter:install
-  - source $(pub run tekartik_travis_ci_flutter:env)
+  - cd repo_support
+  - dart pub get
+  - dart pub run tekartik_travis_ci_flutter:install
+  - source $(dart pub run tekartik_travis_ci_flutter:env)
 script:
   - dart tool/travis.dart
