--- a/repo_support/.gitignore
+++ b/repo_support/.gitignore
@@ -12,8 +12,12 @@ pubspec.lock
 # If you don't generate documentation locally you can remove this line.
 doc/api/
 
-# IDE
-.idea/
-.vscode/
+# Intellij
+*.idea/
 *.iml
 
+# VS code
+.vscode
+
+# Local
+.local/
