--- a/cloud_firestore_type_adapters/pubspec.yaml
+++ b/cloud_firestore_type_adapters/pubspec.yaml
@@ -5,7 +5,7 @@ author: alex@tekartik.com
 publish_to: none
 
 environment:
-  sdk: ">=2.10.0-0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
