--- a/sembast_flutter/pubspec.yaml
+++ b/sembast_flutter/pubspec.yaml
@@ -5,7 +5,7 @@ author:
 homepage:
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
@@ -18,7 +18,7 @@ dev_dependencies:
     git:
       url: git://github.com/tekartik/sembast.dart
       path: sembast_test
-      ref: 2.4.10
+      ref: null_safety
   test:
   dev_test:
 
