--- a/sembast_flutter/pubspec.yaml
+++ b/sembast_flutter/pubspec.yaml
@@ -19,7 +19,12 @@ dev_dependencies:
       ref: null_safety
   test:
   dev_test:
-
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
   # Tools
   process_run: '>=0.10.1'
 
