--- a/repo_support/analysis_options.yaml
+++ b/repo_support/analysis_options.yaml
@@ -1,2 +1,2 @@
-# tekartik analysis_options extension to pedantic
-include: package:pedantic/analysis_options.yaml
+# tekartik recommended lints (extension over google lints and pedantic)
+include: package:tekartik_lints/recommended.yaml
