--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -18,5 +18,10 @@ dev_dependencies:
   test:
   dev_test:
   pedantic:
-
+  tekartik_lints:
+    git:
+      url: git://github.com/tekartik/common.dart
+      ref: null_safety
+      path: packages/lints
+    version: '>=0.1.0'
 
