--- a/sembast_flutter/pubspec.yaml
+++ b/sembast_flutter/pubspec.yaml
@@ -14,15 +14,15 @@ dev_dependencies:
     sdk: flutter
   sembast_test:
     git:
-      url: git://github.com/tekartik/sembast.dart
+      url: https://github.com/tekartik/sembast.dart
       path: sembast_test
-      ref: null_safety
+      ref: dart2_3
   test:
   dev_test:
   tekartik_app_lints_flutter:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2_3
       path: app_lints
     version: '>=0.1.0'
   # Tools
