--- a/repo_support/analysis_options.yaml
+++ b/repo_support/analysis_options.yaml
@@ -1,2 +1,7 @@
 # tekartik recommended lints (extension over google lints and pedantic)
 include: package:tekartik_lints/recommended.yaml
+
+analyzer:
+  language:
+    strict-casts: true
+    strict-inference: true
