--- a/sembast_db_explorer/analysis_options.yaml
+++ b/sembast_db_explorer/analysis_options.yaml
@@ -1,5 +1,8 @@
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
+  language:
+    strict-casts: true
+    strict-inference: true
   exclude:
     - example/
