--- a/notepad_stress_app/pubspec.yaml
+++ b/notepad_stress_app/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   tekartik_notepad_sembast_app:
     git:
       url: https://github.com/alextekartik/flutter_app_example
-      ref: dart2_3
+      ref: dart3a
       path: notepad_sembast
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,7 +35,7 @@ dependencies:
   tekartik_app_rx_utils:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
-      ref: dart2_3
+      ref: dart3a
       path: app_rx_utils
     version: '>=0.1.0'
   flutter_lorem:
@@ -47,7 +47,7 @@ dev_dependencies:
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
-      ref: dart2_3
+      ref: dart3a
       path: packages/lints_flutter
     version: '>=0.1.0'
 
