--- a/notepad_stress_app/pubspec.yaml
+++ b/notepad_stress_app/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
       path: app_rx_utils
     version: '>=0.1.0'
   flutter_lorem:
-  rxdart:
+  rxdart: '>=0.27.7'
   sembast:
 dev_dependencies:
   flutter_test:
