--- a/sembast_flutter/pubspec.yaml
+++ b/sembast_flutter/pubspec.yaml
@@ -18,7 +18,7 @@ dev_dependencies:
       path: sembast_test
       ref: dart3a
   test:
-  dev_test:
+  dev_build:
   tekartik_app_lints_flutter:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
