--- a/sembast_flutter/pubspec.yaml
+++ b/sembast_flutter/pubspec.yaml
@@ -3,7 +3,7 @@ description: Sembast in a flutter package
 version: 0.1.1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.5.0
 
 dependencies:
   flutter:
