--- a/cloud_firestore_type_adapters/pubspec.yaml
+++ b/cloud_firestore_type_adapters/pubspec.yaml
@@ -5,19 +5,19 @@ version: 0.1.0
 publish_to: none
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
     sdk: flutter
-  sembast: '>=3.7.4+2'
+  sembast: ">=3.7.4+3"
   cloud_firestore_platform_interface: '>=1.1.0'
 
 dev_dependencies:
-  dev_build:
+  dev_build: ">=1.1.2"
   flutter_test:
     sdk: flutter
-  process_run: '>=0.10.1'
+  process_run: ">=1.2.1+1"
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
